# Triton

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile.backend  LICENSE  README.fr.md  README.md  codecov.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
api/: main.py
engine/: entities.py  grid.py  simulation.py  sonar_model.py
frontend/: nginx.conf  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.vue
frontend/src/components/: GameCanvas.vue  canvas-helpers.ts
frontend/src/components/__tests__/: GameCanvas.spec.ts  canvas-helpers.spec.ts
frontend/src/stores/: game.ts
frontend/src/stores/__tests__/: game.spec.ts
tests/api/: test_routes.py
tests/engine/: test_entities.py  test_grid.py  test_simulation.py  test_sonar_model.py
